--- a/app/src/main/res/layout/fragment_one_rate_counter.xml
+++ b/app/src/main/res/layout/fragment_one_rate_counter.xml
@@ -7,7 +7,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,7 +19,7 @@
             android:paddingEnd="10sp">
 
             <AutoCompleteTextView
-                style="@style/MainTextStyle"
+                style="@style/InputTextStyle"
                 android:id="@+id/inputLocationSingle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -27,8 +28,7 @@
                 android:inputType="textCapWords|text"
                 android:imeOptions="actionDone"
                 android:maxLines="1"
-                android:maxLength="12"
-                android:textSize="24sp" />
+                android:maxLength="12" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,7 +44,7 @@
 
                 <EditText
                     android:id="@+id/rateSingle"
-                    style="@style/MainTextStyle"
+                    style="@style/InputTextStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="8"
@@ -54,6 +54,11 @@
                     tools:ignore="LabelFor" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="7dp">
+            </View>
 
             <Button
                 android:id="@+id/saveOneRate"
@@ -70,7 +75,6 @@
                 android:id="@+id/viewOneRate"
                 android:layout_width="match_parent"
                 android:layout_height="7dp">
-
             </View>
 
             <LinearLayout
@@ -83,19 +87,16 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="8"
-                    android:text="@string/previous"
-                    android:textSize="20sp" />
+                    android:text="@string/previous"/>
 
                 <EditText
-                    style="@style/MainTextStyle"
+                    style="@style/InputTextStyle"
                     android:id="@+id/inputPreviousSingle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="8"
                     android:hint="@string/input"
                     android:inputType="number"
-                    android:textAlignment="center"
-                    android:textSize="24sp"
                     android:maxLength="7"/>
 
             </LinearLayout>
@@ -103,7 +104,6 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="7dp">
-
             </View>
 
             <LinearLayout
@@ -116,19 +116,16 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="8"
-                    android:text="@string/current"
-                    android:textSize="20sp" />
+                    android:text="@string/current"/>
 
                 <EditText
-                    style="@style/MainTextStyle"
+                    style="@style/InputTextStyle"
                     android:id="@+id/inputCurrentSingle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="8"
                     android:hint="@string/input"
                     android:inputType="number"
-                    android:textAlignment="center"
-                    android:textSize="24sp"
                     android:maxLength="7" />
 
             </LinearLayout>
@@ -136,7 +133,6 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="7dp">
-
             </View>
 
             <Button
@@ -152,7 +148,6 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="7dp">
-
             </View>
 
             <LinearLayout
@@ -173,16 +168,13 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="8"
-                    android:text="@string/nullNumber"
-                    android:textAlignment="center"
-                    android:textSize="24sp" />
+                    android:text="@string/nullNumber"/>
 
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="7dp">
-
             </View>
 
             <LinearLayout
@@ -202,16 +194,13 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="8"
-                    android:text="@string/nullMoney"
-                    android:textAlignment="center"
-                    android:textSize="24sp" />
+                    android:text="@string/nullMoney" />
 
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="7dp">
-
             </View>
 
             <LinearLayout
@@ -220,25 +209,26 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    style="@style/TotalTextStyle"
                     android:layout_width="0dp"
                     android:layout_weight="2"
                     android:layout_height="wrap_content"
-                    android:textSize="32sp"
-                    android:text="@string/total"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorPrimaryDark"/>
+                    android:text="@string/total"/>
 
                 <TextView
-                    style="@style/TitleTextStyle"
+                    style="@style/TotalTextStyle"
                     android:id="@+id/totalSingle"
                     android:layout_width="0dp"
                     android:layout_weight="4"
                     android:layout_height="wrap_content"
-                    android:text="@string/nullMoney"
-                    android:textAlignment="center"
-                    android:textSize="32sp" />
+                    android:text="@string/nullMoney" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="7dp">
+            </View>
 
             <Button
                 android:id="@+id/saveOneRateRecord"
