--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -11,7 +11,7 @@
         android:id="@+id/recyclerViewLinearLayout"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="125sp"
+        android:layout_height="100sp"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -27,13 +27,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_looks_one_black_24dp"
-                tools:ignore="ContentDescription" />
+                android:contentDescription="@string/app_icon" />
 
             <Space
                 android:layout_width="16dp"
                 android:layout_height="match_parent" />
 
             <TextView
+                style="@style/MainTextStyle"
                 android:id="@+id/recycler_item_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,37 +43,33 @@
 
                 android:ellipsize="none"
                 android:fadingEdgeLength="16dp"
-                android:requiresFadingEdge="horizontal"
-
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="30sp"/>
+                android:requiresFadingEdge="horizontal"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/recycler_item_date"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="bottom"
                 android:gravity="bottom"
                 android:maxLines="1"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"/>
 
             <TextView
+                style="@style/TotalTextStyle"
                 android:id="@+id/recycler_item_sum"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="end"
-                android:textSize="36sp"
-                android:textColor="@color/colorPrimaryDark"/>
+                android:layout_height="match_parent"
+                android:gravity="bottom"
+                android:textAlignment="viewEnd"
+                tools:ignore="RtlCompat" />
 
         </LinearLayout>
 
