--- a/app/src/main/res/drawable/button_main_pressed.xml
+++ b/app/src/main/res/drawable/button_main_pressed.xml
@@ -2,14 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient
-        android:startColor="#FFFFFF"
-        android:centerColor="#FFFFFF"
-        android:endColor="#FFFFFF"
-        android:type="radial"
-        android:centerX="50%"
-        android:centerY="50%"
-        android:gradientRadius="360dp"/>
+    <solid
+        android:color="@color/colorPrimary"/>
     <stroke
         android:width="3dp"
         android:color="@color/colorPrimary"/>
