--- a/app/src/main/res/layout/fragment_one_rate_counter.xml
+++ b/app/src/main/res/layout/fragment_one_rate_counter.xml
@@ -62,13 +62,8 @@
 
             <Button
                 android:id="@+id/saveOneRate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/main_button"
-                android:text="@string/rewriteRatesSingle"
-                android:textAllCaps="false"
-                android:textColor="@color/colorPrimary"
-                android:textSize="24sp" />
+                style="@style/MainButton"
+                android:text="@string/rewriteRatesSingle"/>
 
 
             <View
@@ -137,13 +132,8 @@
 
             <Button
                 android:id="@+id/buttonCalculateOneRate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/main_button"
-                android:text="@string/calculate"
-                android:textAllCaps="false"
-                android:textColor="@color/colorPrimary"
-                android:textSize="24sp" />
+                style="@style/MainButton"
+                android:text="@string/calculate"/>
 
             <View
                 android:layout_width="match_parent"
@@ -232,13 +222,8 @@
 
             <Button
                 android:id="@+id/saveOneRateRecord"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/main_button"
-                android:text="@string/saveRecord"
-                android:textAllCaps="false"
-                android:textColor="@color/colorPrimary"
-                android:textSize="24sp" />
+                style="@style/MainButton"
+                android:text="@string/saveRecord"/>
 
             <TextView
                 android:id="@+id/tvLocation"
