--- a/app/src/main/res/layout/fragment_two_rate_counter.xml
+++ b/app/src/main/res/layout/fragment_two_rate_counter.xml
@@ -107,14 +107,8 @@
 
                 <Button
                     android:id="@+id/saveTwoRates"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="40"
-                    android:background="@drawable/main_button"
-                    android:text="@string/rewriteRates"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="24sp" />
+                    style="@style/MainButton"
+                    android:text="@string/rewriteRates"/>
 
             </LinearLayout>
 
@@ -202,14 +196,8 @@
 
                 <Button
                     android:id="@+id/buttonCalculateTwoRates"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="40"
-                    android:background="@drawable/main_button"
-                    android:text="@string/calculate"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="24sp" />
+                    style="@style/MainButton"
+                    android:text="@string/calculate" />
 
             </LinearLayout>
 
@@ -313,13 +301,8 @@
 
             <Button
                 android:id="@+id/saveTwoRatesRecord"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/main_button"
-                android:text="@string/saveRecord"
-                android:textAllCaps="false"
-                android:textColor="@color/colorPrimary"
-                android:textSize="24sp" />
+                style="@style/MainButton"
+                android:text="@string/saveRecord"/>
 
         </LinearLayout>
 
