--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
     </style>
 
     <style name="MainTextStyle">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:typeface">monospace</item>
         <item name="android:textAlignment">center</item>
@@ -35,6 +35,24 @@
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:typeface">monospace</item>
         <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="MainButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/button_main_state_selector</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@drawable/button_main_text_color_selector</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="DeleteButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/button_delete_state_selector</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@drawable/button_delete_text_color_selector</item>
+        <item name="android:textSize">24sp</item>
     </style>
 
 </resources>
